Oppgave 2, css og index ferdig

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <body>
         <header>
             <nav>
-                <a href="index.html">Start</a>
-                <a href="oppgave01/index.html">1</a>
-                <a href="oppgave02/index.html">2</a>
+                <a href="../index.html">Start</a>
+                <a href="./oppgave02/index.html">1</a>
+                <a href="./oppgave02/index.html">2</a>
                 <a href="#">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
