--- a/oppgave01/index.html
+++ b/oppgave01/index.html
@@ -5,10 +5,32 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Oppgave 1</title>
+        <link rel="stylesheet" href="../index.css">
     </head>
     <body>
-        
+        <header>
+            <nav>
+                <a href="../index.html">Start</a>
+                <a href="./index.html">1</a>
+                <a href="../oppgave02/index.html">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">6</a>
+                <a href="#">7</a>
+                <a href="#">8</a>
+            </nav>
 
+        </header>
+
+        <main>
+            <h1>Oppgave 1 </h1>
+            <p></p>
+        </main>
+        
+        <footer>
+            <p>Catharina Sørum - Frontend utvikling 2019 - Fagskolen Kristiania</p>
+        </footer>
         <script src="./index.js"></script>
     </body>
 </html>
