--- a/oppgave03/index.html
+++ b/oppgave03/index.html
@@ -12,8 +12,8 @@
             <nav>
                 <a href="../index.html">Start</a>
                 <a href="../oppgave01/index.html">1</a>
-                <a href="./index.html">2</a>
-                <a href="#">3</a>
+                <a href="../oppgave02/index.html">2</a>
+                <a href="index.html">3</a>
                 <a href="#">4</a>
                 <a href="#">5</a>
                 <a href="#">6</a>
@@ -24,7 +24,7 @@
         </header>
 
         <main>
-            <h1>Oppgave 2 </h1>
+            <h1>Oppgave 3</h1>
             <p></p>
         </main>
         
