--- a/oppgave03/index.html
+++ b/oppgave03/index.html
@@ -25,7 +25,8 @@
 
         <main>
             <h1>Oppgave 3</h1>
-            <p></p>
+            <div id="div1"></div>
+            <div id="div2"></div>
         </main>
         
         <footer>
