1, 2, 3, 4, 6, 7 er så og si klare

--- a/oppgave06/index.html
+++ b/oppgave06/index.html
@@ -6,13 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Oppgave 5</title>
         <link rel="stylesheet" href="../index.css">
-        <style>
-            input {
-                margin: 1rem;
-                padding: 1rem;
-                width: 20rem;
-            }
-        </style>
     </head>
     <body>
         <header>
@@ -23,20 +16,20 @@
                 <a href="../oppgave03/index.html">3</a>
                 <a href="../oppgave04/index.html">4</a>
                 <a href="../oppgave05/index.html">5</a>
-                <a href="index.html">6</a>
-                <a href="#">7</a>
-                <a href="#">8</a>
+                <a class="active" href="index.html">6</a>
+                <a href="../oppgave07/index.html">7</a>
+                <a href="../oppgave08/index.html">8</a>
             </nav>
 
         </header>
 
         <main>
-            <h1>Oppgave 6</h1>
+            <h1 class="oppgaveh1">Oppgave 6</h1>
             <p>Styr skriftstørrelse, fargen på teksten og bakgrunnfargen på denne siden.</p>
             
-            <input type="text" id="inpSkriftfarge" placeholder="Hvilken skriftfarge vil du ha?">
-            <input type="text" id="inpBakgrunnsfarge" placeholder="Hvilken bakgrunnsfarge vil du ha?">
-            <input type="number" id="inpSkriftstørrelse" placeholder="Hvilken skriftstørrelse vil du ha?">
+            <input class ="inpOppgave6" type="text" id="inpSkriftfarge" placeholder="Hvilken skriftfarge vil du ha?">
+            <input class ="inpOppgave6" type="text" id="inpBakgrunnsfarge" placeholder="Hvilken bakgrunnsfarge vil du ha?">
+            <input class ="inpOppgave6" type="number" id="inpSkriftstørrelse" placeholder="Hvilken skriftstørrelse vil du ha?">
         </main>
         
         <footer>
