--- a/oppgave01/index.html
+++ b/oppgave01/index.html
@@ -11,20 +11,20 @@
         <header>
             <nav>
                 <a href="../index.html">Start</a>
-                <a href="./index.html">1</a>
+                <a class="active" href="./index.html">1</a>
                 <a href="../oppgave02/index.html">2</a>
-                <a href="#">3</a>
-                <a href="#">4</a>
-                <a href="#">5</a>
-                <a href="#">6</a>
-                <a href="#">7</a>
-                <a href="#">8</a>
+                <a href="../oppgave03/index.html">3</a>
+                <a href="../oppgave04/index.html">4</a>
+                <a href="../oppgave05/index.html">5</a>
+                <a href="../oppgave06/index.html">6</a>
+                <a href="../oppgave07/index.html">7</a>
+                <a href="../oppgave08/index.html">8</a>
             </nav>
 
         </header>
 
         <main>
-            <h1>Oppgave 1 </h1>
+            <h1 class="oppgaveh1">Oppgave 1 </h1>
             <p></p>
         </main>
         
