--- a/oppgave05/index.html
+++ b/oppgave05/index.html
@@ -6,14 +6,6 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <title>Oppgave 5</title>
         <link rel="stylesheet" href="../index.css">
-        <style>
-            #oppgave05-boks {
-                position: absolute;
-                width: 20px;
-                height: 20px;
-                background-color: green;
-            }
-        </style>
     </head>
     <body>
         <header>
@@ -23,16 +15,16 @@
                 <a href="../oppgave02/index.html">2</a>
                 <a href="../oppgave03/index.html">3</a>
                 <a href="../oppgave04/index.html">4</a>
-                <a href="./index.html">5</a>
-                <a href="#">6</a>
-                <a href="#">7</a>
-                <a href="#">8</a>
+                <a class="active" href="./index.html">5</a>
+                <a href="../oppgave06/index.html">6</a>
+                <a href="../oppgave07/index.html">7</a>
+                <a href="../oppgave08/index.html">8</a>
             </nav>
 
         </header>
 
         <main>
-            <h1>Oppgave 5</h1>
+            <h1 class="oppgaveh1">Oppgave 5</h1>
             <input type="number" id="inpX">
             <input type="number" id="inpY">
             <div id="oppgave05-boks">
