Oppgave 5 og 8 klar

--- a/oppgave05/index.html
+++ b/oppgave05/index.html
@@ -25,8 +25,8 @@
 
         <main>
             <h1 class="oppgaveh1">Oppgave 5</h1>
-            <input type="number" id="inpX">
-            <input type="number" id="inpY">
+            <input type="number" id="inpX" placeholder="Fyll inn et tall">
+            <input type="number" id="inpY" placeholder="Fyll inn et tall">
             <div id="oppgave05-boks">
 
             </div>
