--- a/oppgave07/index.html
+++ b/oppgave07/index.html
@@ -27,7 +27,7 @@
             <h1 class="oppgaveh1">Oppgave 7 - Nyhetsartikkel</h1>
 
             <form id="formNyhetsartikkel"> 
-                <input class="inpOppgave07" type="URL" id="inpImg" accept="imgage/*" placeholder="Bildelink?" required>
+                <input class="inpOppgave07" type="URL" id="inpImg" accept="image/*" placeholder="Bildelink?" required>
                 <input class="inpOppgave07" type="text" id="inpOverskrift" placeholder="Overskrift?" required>
                 <button class="inpOppgave07" type="submit">Legg til nyhetsartikkel</button>
             </form>
