--- a/oppgave06/index.html
+++ b/oppgave06/index.html
@@ -27,9 +27,9 @@
             <h1 class="oppgaveh1">Oppgave 6</h1>
             <p>Styr skriftstørrelse, fargen på teksten og bakgrunnfargen på denne siden.</p>
             
-            <input class ="inpOppgave6" type="text" id="inpSkriftfarge" placeholder="Hvilken skriftfarge vil du ha?">
-            <input class ="inpOppgave6" type="text" id="inpBakgrunnsfarge" placeholder="Hvilken bakgrunnsfarge vil du ha?">
-            <input class ="inpOppgave6" type="number" id="inpSkriftstørrelse" placeholder="Hvilken skriftstørrelse vil du ha?">
+            <input class ="inpOppgave6" type="text" id="inpSkriftfarge" placeholder="Hvilken skriftfarge vil du ha?" autocomplete="off">
+            <input class ="inpOppgave6" type="text" id="inpBakgrunnsfarge" placeholder="Hvilken bakgrunnsfarge vil du ha?" autocomplete="off">
+            <input class ="inpOppgave6" type="number" id="inpSkriftstørrelse" placeholder="Hvilken skriftstørrelse vil du ha?" autocomplete="off">
         </main>
         
         <footer>
