--- a/oppgave07/index.html
+++ b/oppgave07/index.html
@@ -27,8 +27,8 @@
             <h1 class="oppgaveh1">Oppgave 7 - Nyhetsartikkel</h1>
 
             <form id="formNyhetsartikkel"> 
-                <input class="inpOppgave07" type="URL" id="inpImg" accept="image/*" placeholder="Bildelink?" required>
-                <input class="inpOppgave07" type="text" id="inpOverskrift" placeholder="Overskrift?" required>
+                <input class="inpOppgave07" type="URL" id="inpImg" accept="image/*" placeholder="Bildelink?" required autocomplete="off">
+                <input class="inpOppgave07" type="text" id="inpOverskrift" placeholder="Overskrift?" required autocomplete="off">
                 <button class="inpOppgave07" type="submit">Legg til nyhetsartikkel</button>
             </form>
 
