--- a/oppgave08/index.html
+++ b/oppgave08/index.html
@@ -28,11 +28,11 @@
         
 
             <form id="formArrangement">
-                <input class="oppgave08" type="image/*" id="oppgave08InpImg" placeholder="Bilde til arrangementet" required>
-                <input class="oppgave08" type="text" id="oppgave08InpNavn" placeholder="Navnet på arrangementet" required>
-                <input class="oppgave08" type="text" id="oppgave08InpDag" placeholder="Hvilken dag skal arrangementet være?" required>
-                <input class="oppgave08" type="text" id="oppgave08InpSted" placeholder="Hvor skal arrangementet holdes?" required>
-                <input class="oppgave08" type="text" id="oppgave08InpGjester" placeholder="Antall gjester som er invitert?" required>
+                <input class="oppgave08" type="image/*" id="oppgave08InpImg" placeholder="Bilde til arrangementet" required autocomplete="off">
+                <input class="oppgave08" type="text" id="oppgave08InpNavn" placeholder="Navnet på arrangementet" required autocomplete="off">
+                <input class="oppgave08" type="text" id="oppgave08InpDag" placeholder="Hvilken dag skal arrangementet være?" required autocomplete="off">
+                <input class="oppgave08" type="text" id="oppgave08InpSted" placeholder="Hvor skal arrangementet holdes?" required autocomplete="off">
+                <input class="oppgave08" type="text" id="oppgave08InpGjester" placeholder="Antall gjester som er invitert?" required autocomplete="off">
                 <button class="oppgave08" type="submit">Legg inn arrangement</button>
             </form>
 
